<resources>
    <string name="app_name" translatable="false">Dictate</string>
    <string name="dictate_lang_afrikaans">Afrikaans</string>
    <string name="dictate_lang_arabic">Arabic</string>
    <string name="dictate_lang_armenian">Armenian</string>
    <string name="dictate_lang_azerbaijani">Azerbaijani</string>
    <string name="dictate_lang_belarusian">Belarusian</string>
    <string name="dictate_lang_bosnian">Bosnian</string>
    <string name="dictate_lang_bulgarian">Bulgarian</string>
    <string name="dictate_lang_catalan">Catalan</string>
    <string name="dictate_lang_chinese">Chinese</string>
    <string name="dictate_lang_croatian">Croatian</string>
    <string name="dictate_lang_czech">Czech</string>
    <string name="dictate_lang_danish">Danish</string>
    <string name="dictate_lang_dutch">Dutch</string>
    <string name="dictate_lang_english">English</string>
    <string name="dictate_lang_estonian">Estonian</string>
    <string name="dictate_lang_finnish">Finnish</string>
    <string name="dictate_lang_french">French</string>
    <string name="dictate_lang_galician">Galician</string>
    <string name="dictate_lang_german">German</string>
    <string name="dictate_lang_greek">Greek</string>
    <string name="dictate_lang_hebrew">Hebrew</string>
    <string name="dictate_lang_hindi">Hindi</string>
    <string name="dictate_lang_hungarian">Hungarian</string>
    <string name="dictate_lang_icelandic">Icelandic</string>
    <string name="dictate_lang_indonesian">Indonesian</string>
    <string name="dictate_lang_italian">Italian</string>
    <string name="dictate_lang_japanese">Japanese</string>
    <string name="dictate_lang_kannada">Kannada</string>
    <string name="dictate_lang_kazakh">Kazakh</string>
    <string name="dictate_lang_korean">Korean</string>
    <string name="dictate_lang_latvian">Latvian</string>
    <string name="dictate_lang_lithuanian">Lithuanian</string>
    <string name="dictate_lang_macedonian">Macedonian</string>
    <string name="dictate_lang_malay">Malay</string>
    <string name="dictate_lang_marathi">Marathi</string>
    <string name="dictate_lang_maori">Maori</string>
    <string name="dictate_lang_nepali">Nepali</string>
    <string name="dictate_lang_norwegian">Norwegian</string>
    <string name="dictate_lang_persian">Persian</string>
    <string name="dictate_lang_polish">Polish</string>
    <string name="dictate_lang_portuguese">Portuguese</string>
    <string name="dictate_lang_romanian">Romanian</string>
    <string name="dictate_lang_russian">Russian</string>
    <string name="dictate_lang_serbian">Serbian</string>
    <string name="dictate_lang_slovak">Slovak</string>
    <string name="dictate_lang_slovenian">Slovenian</string>
    <string name="dictate_lang_spanish">Spanish</string>
    <string name="dictate_lang_swahili">Swahili</string>
    <string name="dictate_lang_swedish">Swedish</string>
    <string name="dictate_lang_tagalog">Tagalog</string>
    <string name="dictate_lang_tamil">Tamil</string>
    <string name="dictate_lang_thai">Thai</string>
    <string name="dictate_lang_turkish">Turkish</string>
    <string name="dictate_lang_ukrainian">Ukrainian</string>
    <string name="dictate_lang_urdu">Urdu</string>
    <string name="dictate_lang_vietnamese">Vietnamese</string>
    <string name="dictate_lang_welsh">Welsh</string>
    <string name="dictate_settings_title">Dictate Settings</string>
    <string name="dictate_microphone_permission_granted">Microphone permission granted (granted).</string>
    <string name="dictate_microphone_permission_denied">Microphone permission denied (denied).</string>
    <string name="dictate_record">Record</string>
    <string name="dictate_send">Send (%1$s)</string>
    <string name="dictate_connecting">Connecting BT</string>
    <string name="dictate_sending">Sending …</string>
    <string name="dictate_timeout_msg">Timeout exceeded. Maybe OpenAI is overloaded or you have a poor internet connection.</string>
    <string name="dictate_invalid_api_key_msg">Invalid API key. Open settings to correct it?</string>
    <string name="dictate_quota_exceeded_msg">Your quota exceeded. Open OpenAI account to buy new credits?</string>
    <string name="dictate_internet_error_msg">Couldn\'t connect to OpenAI. Please check your internet connection.</string>
    <string name="dictate_okay">Okay</string>
    <string name="dictate_cancel">Cancel</string>
    <string name="dictate_settings_api_key_title">Change OpenAI API key (key)</string>
    <string name="dictate_settings_vibration_title">Haptic feedback (vibration)</string>
    <string name="dictate_settings_instant_output_title">Instant output (fast)</string>
    <string name="dictate_settings_instant_output_summary">Disable typing animation when the result is ready</string>
    <string name="dictate_settings_vibration_summary">Vibrate on button presses and errors</string>
    <string name="dictate_about" translatable="false">Dictate v%1$s MOD by BJOERN\nMade with ❤️ by DevEmperor\nSoli deo gloria ✝️</string>
    <string name="dictate_settings_usage">View usage (stats)</string>
    <string name="dictate_yes">Yes</string>
    <string name="dictate_no">No</string>
    <string name="dictate_usage_reset_usage_title">Reset usage?</string>
    <string name="dictate_usage_reset_usage_message">Are you sure to reset Dictate usage?</string>
    <string name="dictate_settings_feedback">Give feedback (email)</string>
    <string name="dictate_feedback_subject" translatable="false">Dictate Feedback</string>
    <string name="dictate_feedback_body">Write your feedback here</string>
    <string name="dictate_feedback_title">Choose an email client</string>
    <string name="dictate_onboarding_welcome">Welcome to\nDictate\n></string>
    <string name="dictate_onboarding_permissions_microphone_request">Dictate needs your permission to use the microphone. Click the button below to grant this permission.</string>
    <string name="dictate_onboarding_permissions_microphone_button">Grant microphone permission</string>
    <string name="dictate_onboarding_permissions_keyboard_request">Dictate must be activated as a keyboard in the settings. Click on the button below to enable this.\n\nYou can also activate the keyboard button on the navigation bar to switch to Dictate more quickly.</string>
    <string name="dictate_onboarding_permissions_keyboard_button">Enable Dictate keyboard</string>
    <string name="dictate_keyboard_disabled">Dictate keyboard disabled (inactive).</string>
    <string name="dictate_keyboard_enabled">Dictate keyboard enabled (active).</string>
    <string name="dictate_api_key_hint" translatable="false">sk-proj-kv … / gsk_TsWDxi …</string>
    <string name="dictate_onboarding_api_key_finish">Set API key and finish setup</string>
    <string name="dictate_onboarding_complete_dialog_title">Just some final information</string>
    <string name="dictate_onboarding_complete_dialog_message">You can switch between your normal keyboard and Dictate at any time. Simply click on the keyboard status icon below your standard keyboard and select Dictate.\n\nIf you want to know the full potential of Dictate, go to the settings and check out the How-To page for detailed app instructions.\n\nDictate does not send any of your transcribed audios/texts anywhere (except to OpenAI for transcription of course). Since the developer values data protection, he does not receive any information about what you are recording. If you don\'t trust these words, feel free to look into the source code, to which you will find a link in the settings.\n\nHave fun with it 💪</string>
    <string name="dictate_settings_instant_recording_title">Instant recording 🎙️</string>
    <string name="dictate_settings_instant_recording_summary">Start recording as soon as you switch to Dictate keyboard</string>
    <string name="dictate_settings_api_title">API settings</string>
    <string name="dictate_settings_about_title">About</string>
    <string name="dictate_custom_host_hint" translatable="false">https://api.example.com/</string>
    <string name="dictate_detect_automatically">Detect automatically</string>
    <string name="dictate_update_installed_msg">Dictate has been updated. See changes?</string>
    <string name="dictate_whats_new">What\'s new</string>
    <string name="dictate_changelog_5">v1.4\n\n- You can now pause and resume while recording your voice. ⏯️\n\n- During recording, other media are now paused and then continued. 💡\n\n- Long-click on the keyboard-switch-button opens input method picker ⌨️\n\n- The translation function works more reliable now. 💪\n\n- Added German app translation 🇩🇪\n\n\n</string>
    <string name="dictate_settings_donate">Donate 🤝</string>
    <string name="dictate_settings_feedback_address" translatable="false">contact@devemperor.net</string>
    <string name="dictate_settings_donate_address" translatable="false">paypal.me/DevEmperor</string>
    <string name="dictate_settings_prompt_title">Change style prompt 💬</string>
    <string name="dictate_changelog_donate">If you like Dictate, I would be very happy about a small donation to support this project. 🥰\n\n</string>
    <string name="dictate_changelog_6">v1.5\n\n- In the settings, you can now store a system prompt for Whisper to guide speech recognition in a certain direction (e.g. specify special words in advance or influence the punctuation and filler words). ✏️\n\n- After a failed transcription, you can now resend the last recording. 🔄\n\n- Holding down the delete button for longer now speeds up the deletion process. 🚀\n\n- A donate button has been added in the settings. 🤝\n\n- Some design changes and bug fixes have been made. ✨\n\n\n</string>
    <string name="dictate_settings_rewording_title">Rewording Settings</string>
    <string name="dictate_settings_rewording_enabled_title">Rewording using AI ✍️</string>
    <string name="dictate_settings_rewording_enabled_summary">Enable rewording of recognised text with OpenAIs GPT models</string>
    <string name="dictate_settings_edit_custom_rewording_prompts">Edit rewording prompts</string>
    <string name="dictate_prompts_overview_info">Below you can create and edit your prompts for rewording using OpenAIs GPT models.</string>
    <string name="dictate_prompts_overview_no_prompts">You have no prompts created.\nClick the button below to add one.</string>
    <string name="dictate_delete_prompt">Delete prompt?</string>
    <string name="dictate_import_prompts">Import prompts</string>
    <string name="dictate_export_prompts">Export prompts</string>
    <string name="dictate_import_export">Import/Export</string>
    <string name="dictate_delete_prompt_message">Are you sure to delete this prompt?</string>
    <string name="dictate_requires_selection">Requires text selection</string>
    <string name="dictate_always_use_for_every_transcription">Automatically apply to every transcription</string>
    <string name="dictate_send_screenshot">Send screenshot</string>
    <string name="dictate_accessibility_service_disabled_title">Accessibility service disabled</string>
    <string name="dictate_accessibility_service_disabled_message">To send screenshots, you need to enable the accessibility service for Dictate in the system settings.</string>
    <string name="dictate_open_settings">Open settings</string>
    <string name="dictate_screenshot_not_supported">Screenshots are not supported on your device.</string>
    <string name="dictate_screenshot_not_supported_api">Screenshots are only supported by OpenAI</string>
    <string name="dictate_save">Save</string>
    <string name="dictate_edit_prompt_name_hint">Enter a name for this prompt</string>
    <string name="dictate_transcribe_audio_file">Transcribe audio file</string>
    <string name="dictate_transcribing">Transcribing…</string>
    <string name="dictate_copy">Copy</string>
    <string name="dictate_close">Close</string>
</resources>